# past-partner

./: .env.example  .gitignore  README.md  pyproject.toml
models/: testRode.3mf
notes/: 2025-04-25.md  2025-05-01.md  2025-05-02.md  2025-05-07.md  TODO NOTE.md  diagram.excalidraw
notes/.obsidian/: graph.json  workspace.json
notes/Modules/Core/: PubSub.md
notes/Robot/: Describe.md  Move.md  Remember.md  Requirement.md  Talk.md  What can he do.md
project/: Dockerfile
project/src/: main.py
project/tests/: __main__.py
src/pastpartner/: __init__.py
src/pastpartner/modules/: listen.py  speak.py  think.py  voice.py
tests/: test_listen.py
