[project]
name = "pastpartner"
version = "0.1.0"
description = ""
authors = [
    {name = "lpotvin",email = "ludopotvin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-whisper (>=20250625,<20250626)"
]

[tool.poetry]
packages = [{include = "pastpartner", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
