[project]
name = "pastpartner"
version = "0.1.0"
description = ""
authors = [
    {name = "lpotvin",email = "ludopotvin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black (>=25.1.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "pastpartner", from = "src"}]

[tool.poetry.scripts]
pastpartner = "pastpartner.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
