[project]
name = "pastpartner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lpotvin", email = "ludopotvin@gmail.com" }
]
requires-python = ">=3.11, <3.12"
dependencies = [
    "openai>=1.107.3",
    "piper-tts>=1.3.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
    "realtimestt>=0.3.104",
    "sounddevice>=0.5.2",
    "vosk>=0.3.45",
]

[project.scripts]
pastpartner = "pastpartner:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
